objects/Case.object
<CustomObject>
    <fields>
        <fullName>Hours_Travel__c</fullName>
        <description>Number of hours to travel back and forth to site.</description>
        <label>Hours Travel</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Include_in_Visit_Summary_Report__c</fullName>
        <description>Same formula as Performance Report formula field but excludes case comment criteria. Used in Conga Reports</description>
        <formula>IF(AND(OR(AND(Case_End_Date__c&lt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c, 
Case_Start_Date__c&gt;=ServiceContract_Case__r.Account.ReportingPeriodStartDate__c), 
AND(Date_Maintenance_Completed__c&lt;=ServiceContract_Case__r.Account.ReportingPeriodStartDate__c, 
Date_Maintenance_Completed__c&gt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c)), 
ServiceContract_Case__r.IncludeInReports__c = TRUE), &quot;Yes&quot;, 

IF(AND(DATEVALUE(LastModifiedDate)&lt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c, 
DATEVALUE(LastModifiedDate)&gt;=ServiceContract_Case__r.Account.ReportingPeriodStartDate__c, ISBLANK(ClosedDate), 
ISBLANK(Date_Maintenance_Completed__c), ISBLANK(Case_End_Date__c), ServiceContract_Case__r.IncludeInReports__c = TRUE), 
&quot;Yes&quot;, 

IF(AND(NOT(ISPICKVAL(Status, &quot;Closed&quot;)), NOT(ISBLANK(Case_End_Date__c)),NOT(ISPICKVAL(Status, &quot;Completed&quot;)),
NOT(ISPICKVAL(Status, &quot;Closed - Issue Resolved Automatically&quot;)), ServiceContract_Case__r.IncludeInReports__c = TRUE), &quot;Yes&quot;, 

&quot;No&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Include in Visit Summary Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeinPerformanceReport__c</fullName>
        <description>Used for Conga Reports</description>
        <formula>IF(AND(
Case_End_Date__c&lt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c, 
Case_Start_Date__c &gt;=ServiceContract_Case__r.Account.ReportingPeriodStartDate__c, Number_of_Work_Orders__c&gt;=1, NumberofWOLIswithComment__c&gt;=1,
ServiceContract_Case__r.IncludeInReports__c = TRUE), &quot;Yes&quot;,

IF(AND(
Case_End_Date__c &lt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c,
Case_End_Date__c &gt;=ServiceContract_Case__r.Account.ReportingPeriodStartDate__c, Number_of_Work_Orders__c&gt;=1,NumberofWOLIswithComment__c&gt;=1,
ServiceContract_Case__r.IncludeInReports__c = TRUE),&quot;Yes&quot;,


IF(AND(
Case_End_Date__c &lt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c,
ISPICKVAL(Status, &quot;Active&quot;), Number_of_Work_Orders__c&gt;=1,NumberofWOLIswithComment__c&gt;=1,
ServiceContract_Case__r.IncludeInReports__c = TRUE),&quot;Yes&quot;,


IF(AND(
Case_Start_Date__c&gt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c,
ISPICKVAL(Status, &quot;Active&quot;), Number_of_Work_Orders__c&gt;=1,NumberofWOLIswithComment__c&gt;=1,
ServiceContract_Case__r.IncludeInReports__c = TRUE),&quot;Yes&quot;,

IF(AND(
ISBLANK(Case_End_Date__c),
Case_Start_Date__c &lt; ServiceContract_Case__r.Account.ReportingPeriodEndDate__c,
DATEVALUE(LastModifiedDate)&gt;=ServiceContract_Case__r.Account.ReportingPeriodStartDate__c,
DATEVALUE(LastModifiedDate)&lt;=ServiceContract_Case__r.Account.ReportingPeriodEndDate__c +30,  NumberofWOLIswithComment__c&gt;=1, Number_of_Work_Orders__c&gt;=1, RecordType.DeveloperName&lt;&gt; &quot;Maintenance_Case&quot;,
ServiceContract_Case__r.IncludeInReports__c = TRUE), &quot;Yes&quot;, 

&quot;No&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula used to determine if Case should be included in the Conga Performance Reports (Account button)</inlineHelpText>
        <label>Include in Performance Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Swaped_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this if the case resulted in an inverter swap out.</description>
        <label>Inverter Swaped Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Note__c</fullName>
        <inlineHelpText>The reason the site went offline.</inlineHelpText>
        <label>Issue Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <formula>IF(Account.GroSolar__c = &apos;FALSE&apos; , &apos;Commercial&apos;, IF(Account.GroSolar__c  = &apos;TRUE&apos;, &apos;Residential&apos;, &apos;Commercial&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically filled in to show if the project is residential or commercial based on associated account.</inlineHelpText>
        <label>Job Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LaborCostsQuoted__c</fullName>
        <description>quote cost for labor - sent to the customer, if values exist already on related contact those will be brought over upon creation of the case, but can be edited if necessary.</description>
        <inlineHelpText>quote cost for labor - sent to the customer, if values exist already on related contact those will be brought over upon creation of the case, but can be edited if necessary.</inlineHelpText>
        <label>Labor Costs - Quoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Billing__c</fullName>
        <label>Labor Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Not Billable</fullName>
                </value>
                <value>
                    <fullName>Billable - Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Bill EPC Commissioning</fullName>
                </value>
                <value>
                    <fullName>EPC Warranty</fullName>
                </value>
                <value>
                    <fullName>O&amp;M Warranty</fullName>
                </value>
                <value>
                    <fullName>Bill EPC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastServiceVisit__c</fullName>
        <description>shows date of most recently completed service visit - updated via RH</description>
        <inlineHelpText>shows date of most recently completed service visit</inlineHelpText>
        <label>Last Service Visit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Work_Order__c</fullName>
        <description>shows date of most recently completed work order - updated via RH</description>
        <inlineHelpText>shows date of most recently completed work order</inlineHelpText>
        <label>Last Completed Work Order</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LatestVisitCommentDate__c</fullName>
        <description>shows most recent date of most recently made visit comment, used with RH</description>
        <inlineHelpText>shows most recent date of most recently made visit comment</inlineHelpText>
        <label>Latest Visit Comment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Latest_Case_Comment_Date__c</fullName>
        <label>Latest Case Comment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Light_Reading_w_m2__c</fullName>
        <description>Light from solar insolation meter</description>
        <label>Light Reading (w/m2)</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link_to_Contract_Documents__c</fullName>
        <formula>Project__r.Contract__r.Link_to_Contract_Documents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Contract Documents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailID__c</fullName>
        <label>MailID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maintenance_Type__c</fullName>
        <label>Maintenance Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary PM</fullName>
                </value>
                <value>
                    <fullName>Secondary PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Comments__c</fullName>
        <description>comments should be for customers - used on case closure forms.</description>
        <inlineHelpText>comments should be for customers - used on case closure forms.</inlineHelpText>
        <label>Case Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Model__c</fullName>
        <label>Model #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Rebate_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was a form filled out to get compesated from manufacturer.</description>
        <label>Manufacturer Rebate Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Ticket__c</fullName>
        <inlineHelpText>To be entered whenever a manufacturer provides an RMA or service.  This field is required if either of the following fields is set to yes: 
Supplier/Manufacturer Service Required
Supplier/Manufacturer Parts Required</inlineHelpText>
        <label>Manufacturer RMA/Ticket #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaterialCostQuoted__c</fullName>
        <description>quoted cost for the customer.if values are populated on the contract already they are brought over upon creation of the case, but can be edited if necessary</description>
        <inlineHelpText>quoted cost for the customer, if values are populated on the contract already they are brought over upon creation of the case, but can be edited if necessary.</inlineHelpText>
        <label>Material Cost - Quoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__EmailSentTo__c</fullName>
        <label>EmailSentTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMAccountOverride__c</fullName>
        <label>NVMAccountOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMCaseOrigin__c</fullName>
        <description>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</description>
        <inlineHelpText>The content of this field is presented on the contact pad when a case is assigned to an agent. For example: Email</inlineHelpText>
        <label>NVM Case Origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMNodeOverride__c</fullName>
        <description>Used to override the NewVoiceMedia node a case routing request is sent to</description>
        <inlineHelpText>Used to override the NewVoiceMedia node a case routing request is sent to</inlineHelpText>
        <label>NVMNodeOverride</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedIn__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged in</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged in</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedIn</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMOverrideCaseOwnerTimeoutLoggedOut__c</fullName>
        <description>Override: how long to try to route replies to the case owner, when they are logged out</description>
        <inlineHelpText>Override: how long to try to route replies to the case owner, when they are logged out</inlineHelpText>
        <label>NVMOverrideCaseOwnerTimeoutLoggedOut</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__NVMRoutable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine whether a case should be routed to an agent via NVM</description>
        <inlineHelpText>Used to determine whether a case should be routed to an agent via NVM</inlineHelpText>
        <label>NVMRoutable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__RoutePlanIdentifier__c</fullName>
        <label>RoutePlanIdentifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMContactWorld__Skills__c</fullName>
        <label>Skills</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewPublicPortalCaseComment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set automatically by workflow rule whenever a new public comment is created on a portal visible case.</description>
        <inlineHelpText>Set automatically by workflow rule whenever a new public comment is created on a portal visible case.</inlineHelpText>
        <label>NewPublicPortalCaseComment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NextSteps__c</fullName>
        <description>used for warranty cases</description>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notifications_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Customer portal based email notifications will be sent to this Contact.  Field is set automatically when a case is created by a customer portal user.  not used by O&amp;M</inlineHelpText>
        <label>Notifications Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Attachments__c</fullName>
        <description>for updating &quot;last modified date&quot; when an attachment is updated or uploaded
for use with Diaspark</description>
        <label>Number of Attachments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Service_Visits__c</fullName>
        <description>counts how many SV&apos;s have been completed., used with RH to draw comparison to # of Visits - required to be equal to close case</description>
        <inlineHelpText>counts how many SV&apos;s have been completed.</inlineHelpText>
        <label>Number of Completed Service Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Service_Visits__c</fullName>
        <description>used for O&amp;M accounting</description>
        <label>Number of Service Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Work_Orders__c</fullName>
        <inlineHelpText>Total Number of Work Orders - Rollup</inlineHelpText>
        <label>Number of Work Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofWOLIswithComment__c</fullName>
        <description>used with Rollup Helper for Performance Reports</description>
        <label>Number of WOLIs with Comment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>O_M_Issue_Tracking__c</fullName>
        <description>old name was O&amp;M Issue Tracking</description>
        <inlineHelpText>Reactive: Site failure must respond immediately, Issue Tracking:  O&amp;M team is watchin, isn’t a site failure &amp; doesn’t require immediate response, Project: Long term repair agreed upon by case owner &amp; site owner to be outside the realm of reactive service</inlineHelpText>
        <label>Case Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reactive</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Issue Tracking</fullName>
                </value>
                <value>
                    <fullName>Construction Closeout</fullName>
                </value>
                <value>
                    <fullName>Satcon</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Carport Investigation</fullName>
                </value>
                <value>
                    <fullName>Performance Investigation</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Safety</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <label>Old Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Project_Size_Watts_STC__c</fullName>
        <formula>Project__r.Overall_Project_Size_Watts_STC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Project Size Watts (STC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PM_Header_Field__c</fullName>
        <formula>&quot;Solar Array&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PM Header Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Report_Account_Name__c</fullName>
        <description>capitalizes Account Name for reporting purposes, no need to be on layout</description>
        <formula>UPPER( Account.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>capitalizes Account Name for reporting purposes, no need to be on layout</inlineHelpText>
        <label>PM Report Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <description>pulls in parent account name from related Account.</description>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls in parent account name from related Account.</inlineHelpText>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Performance_Maintenance_Conclusion__c</fullName>
        <label>Performance Maintenance Conclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Performance_Maintenance_Introduction__c</fullName>
        <label>Performance Maintenance Introduction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Photo_1__c</fullName>
        <label>Photo 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo_2__c</fullName>
        <label>Photo 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Photo_3__c</fullName>
        <label>Photo 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Portal_Inquiry_Type__c</fullName>
        <inlineHelpText>Portal driven, not used  by O&amp;M</inlineHelpText>
        <label>Portal Inquiry Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>My System Is Not Working</fullName>
                </value>
                <value>
                    <fullName>General Inquiries/Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Effected__c</fullName>
        <inlineHelpText>To be selected yes if production on site is in anyway effected by a component</inlineHelpText>
        <label>Production Affected</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectLookupLabelClosed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to help filter Case Related List to show only Closed Cases, updated via LH, no need to be on layouts</description>
        <inlineHelpText>used to help filter Case Related List to show only Closed Cases, updated via LH, no need to be on layouts</inlineHelpText>
        <label>Project Lookup Label Closed</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Closed Cases</relationshipLabel>
        <relationshipName>ProjectLookupRelationshipClosed</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectLookupLabel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to help filter Case Related List to show only Active Cases, updated via LH, no need to be on layouts</description>
        <inlineHelpText>used to help filter Case Related List to show only Active Cases, updated via LH, no need to be on layouts</inlineHelpText>
        <label>Project Lookup Label Open</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Active Cases</relationshipLabel>
        <relationshipName>ProjectLookupRelationship</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_City__c</fullName>
        <description>brings over site city from related project</description>
        <formula>Project__r.Site_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>brings over site city from related project</inlineHelpText>
        <label>Project City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <description>For use with Diaspark Portal to connect cases to projects</description>
        <formula>Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <description>This field is not on any layout but is used on the web to case form on Borrego&apos;s website. This field is used to help set the branch so the case will be assigned correctly.</description>
        <label>Project Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>California - Northern</fullName>
                </value>
                <value>
                    <fullName>California - Southern</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_State__c</fullName>
        <description>pulls over project state from related project</description>
        <formula>Project__r.Site_State__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls over project state from related project</inlineHelpText>
        <label>Project State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Project</description>
        <inlineHelpText>Lookup to Project associated with Account</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project__c.AcctSeed__Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectifClosed__c</fullName>
        <description>used to filter related list to view only cases closed</description>
        <formula>IF( 
      OR(ISPICKVAL(Status,&quot;Closed&quot;), ISPICKVAL(Status, &quot;Completed&quot;))
      &amp;&amp;  Project_ID__c  != Null,
       Project_ID__c, 
    Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to filter related list to view only cases closed</inlineHelpText>
        <label>Project if Closed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectsifOpen__c</fullName>
        <description>used to filter related list to view only active cases   Used with LH</description>
        <formula>IF( 
       
OR(
ISPICKVAL(Status,&quot;New&quot;),ISPICKVAL(Status,&quot;Follow Up&quot;), 
ISPICKVAL(Status, &quot;Active&quot;),
ISPICKVAL(Status, &quot;New Case&quot;), 
ISPICKVAL(Status, &quot;Deployment Review&quot;),
ISPICKVAL(Status, &quot;Inventory Fulfillment&quot;),
ISPICKVAL(Status, &quot;Pending Quote&quot;),
ISPICKVAL(Status, &quot;Ready to Schedule&quot;),
ISPICKVAL(Status, &quot;Scheduled&quot;),
ISPICKVAL(Status, &quot;Ops Review&quot;),
ISPICKVAL(Status, &quot;Escalated to SPG&quot;),
ISPICKVAL(Status, &quot;Escalated to Regional Manager&quot;),
ISPICKVAL(Status, &quot;Escalated to Director&quot;),
ISPICKVAL(Status, &quot;Subcontracted&quot;),
ISPICKVAL(Status, &quot;In Progress&quot;),
Contains(TEXT(Status),&quot;ON HOLD&quot;),
Contains(TEXT(Status),&quot;On Hold&quot;)

) 
       &amp;&amp;  Project_ID__c  != Null,
       Project_ID__c, 
    Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>used to filter related list to view only active cases, includes all Status except Closed, Completed</inlineHelpText>
        <label>Projects if Open</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is field is updated via trigger if there is primary quote and quote status is not equal to accepted and used in validation rule</description>
        <inlineHelpText>This is field is updated via trigger if there is primary quote and quote status is not equal to accepted and used in validation rule</inlineHelpText>
        <label>Quote Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Attached__c</fullName>
        <description>count of quotes associated with Case - updated via a trigger</description>
        <label>Quote Attached</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuotedAmount__c</fullName>
        <description>rolls up the quoted amount of all accepted and approved quotes</description>
        <label>Quoted Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Fixed_Price__c</fullName>
        <description>pulls value from field of same name from related Contract, used in other calculations on the page</description>
        <formula>ServiceContract_Case__r.Quoted_Fixed_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls value from field of same name from related Contract</inlineHelpText>
        <label>Quoted Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Gross_Profit__c</fullName>
        <description>Formula calculates $ amount as “Fixed/Estimated Price” minus the sum of “Quoted Material Cost” and “Quoted Labor Cost”</description>
        <formula>FixedCostsQuoted__c  - (  LaborCostsQuoted__c  +   MaterialCostQuoted__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula calculates $ amount as “Fixed/Estimated Price” minus the sum of “Quoted Material Cost” and “Quoted Labor Cost”</inlineHelpText>
        <label>Quoted Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Gross_Profit_x__c</fullName>
        <description>Formula calculates % amount as “Fixed/Estimated Price” minus the sum of “Quoted Material Cost” and “Quoted Labor Cost” divided by “Fixed/Estimated Price”</description>
        <formula>Quoted_Gross_Profit__c /  FixedCostsQuoted__c</formula>
        <inlineHelpText>Formula calculates % amount as “Fixed/Estimated Price” minus the sum of “Quoted Material Cost” and “Quoted Labor Cost” divided by “Fixed/Estimated Price”</inlineHelpText>
        <label>Quoted Gross Profit %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quoted_Labor_Costs__c</fullName>
        <description>pulls value from field of same name from related Service Contract, used to perform other calcuations on case</description>
        <formula>ServiceContract_Case__r.Quoted_Labor_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls value from field of same name from related Service Contract</inlineHelpText>
        <label>Quoted Labor Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Material_Cost__c</fullName>
        <description>pulls in value from field of same name on related Service Contract, used in other calcuations on the case</description>
        <formula>ServiceContract_Case__r.Quoted_Material_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>pulls in value from field of same name on related Service Contract</inlineHelpText>
        <label>Quoted Material Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RMA_Number__c</fullName>
        <label>RMA Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
</CustomObject>